--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.0.7"
+channels = {extras = ["daphne"], version = "^4.1.0"}
 
 
 [build-system]
